adicionando abas no projeto

--- a/index.html
+++ b/index.html
@@ -41,25 +41,58 @@
     <main>
         <section class="section">
             <div class="container">
-                <div class="columns is-vcentered">
-                    <div class="column is-3">
-                        <h1 class="is-size-1 title">Doker</h1>
-                        <h2 class="is-size-2 subtitle">Dark Roast</h2>
+                <div class="columns is-vcentered is-multiline">
+                    <div class="column is-6-tablet is-3-desktop">
+                        <h1 class="is-size-3-mobile is-size-1-desktop title">Doker</h1>
+                        <h2 class="is-size-3-mobile is-size-2-desktop subtitle">Dark Roast</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo minus aut cumque quo officia laboriosam quae ipsa consequuntur, debitis natus.
                         </p>
 
                     </div>
-                    <div class="column is-5 has-text-centered">
+                    <div class="column is-6-tablet is-5-desktop has-text-centered">
                         <img src="assets/product.png" alt="docker coffee" class="px-6">
                     </div>
-                    <div class="column is-4">
+                    <div class="column is-12-tablet is-4-desktop">
                         <div class="is-size-4 mb-4">$10.95</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, illo.</p>
                     </div>
                 </div>
                 
             </div>
+        </section>
 
+        <section class="section">
+            <div class="coneiner">
+                <div class="columns is-8 is-variable">
+                    <div class="column is-7-tablet">
+                        <div class="tabs is-boxed">
+                            <ul >
+                                <li class="is-active" data-target="product-details">
+                                    <a>Product Details</a>
+                                </li>
+                                <li data-target="delivery-information">
+                                    <a>Delivery Information</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="px-2" id="tab-content">
+                            <div id="product-details">
+                                <h3 class="is-size-5 title">Product Details</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus odit, voluptatem quod placeat nisi vero dolorem accusantium! Magni, ab voluptates?</p>
+                            </div>
+                            <div id="delivery-information" class="is-hidden">
+                                <h3 class="is-size-5 title">Delivery Information</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus odit, voluptatem quod placeat nisi vero dolorem accusantium! Magni, ab voluptates?</p>
+                            </div>
+                        </div>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fugit iste voluptatibus pariatur debitis, illo nihil dolorum? Quidem corrupti consequatur nam, delectus, esse ea molestiae, quibusdam nemo quisquam quasi dolorum.</p>
+                    </div>
+                    <div class="column is-5-tablet">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim laudantium facilis autem repellat dignissimos consequuntur doloremque rem neque expedita? Quas.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
   <script src="index.js"></script>
