--- a/index.html
+++ b/index.html
@@ -85,11 +85,16 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus odit, voluptatem quod placeat nisi vero dolorem accusantium! Magni, ab voluptates?</p>
                             </div>
                         </div>
-
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fugit iste voluptatibus pariatur debitis, illo nihil dolorum? Quidem corrupti consequatur nam, delectus, esse ea molestiae, quibusdam nemo quisquam quasi dolorum.</p>
                     </div>
                     <div class="column is-5-tablet">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim laudantium facilis autem repellat dignissimos consequuntur doloremque rem neque expedita? Quas.</p>
+                        <article class="message">
+                            <div class="message-header">
+                              <p>Earn Points with the Coffee Club</p>
+                            </div>
+                            <div class="message-body">
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi officiis expedita unde aspernatur iure! Distinctio nemo, autem blanditiis deserunt incidunt maiores sequi accusamus dolores sint. Odio dolorem quas sapiente. Illum.</p>
+                            </div>
+                          </article>
                     </div>
                 </div>
             </div>
